# trending-bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-03-trending-bot-plan.md  2026-07-04-multi-source-trending-plan.md  2026-07-05-weekly-newsletter-sources-plan.md
docs/superpowers/specs/: 2026-07-03-trending-bot-design.md  2026-07-04-multi-source-trending-design.md  2026-07-05-weekly-newsletter-sources-design.md
src/: cache.rs  fetcher.rs  format.rs  hn.rs  item.rs  keychain.rs  lobsters.rs  main.rs  notify.rs  output.rs  repo.rs  rss.rs  source.rs  summary.rs
