[package]
name = "trending-bot"
version = "0.1.0"
edition = "2021"
description = "GitHub Trending scraper - AI-friendly structured JSON output with incremental caching"

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
scraper = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rss = "2"

[dev-dependencies]
tempfile = "3"
